Crash in [@ mozilla::media::Interval<T>::Interval<T>]
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox-esr115 | --- | fixed |
| firefox115 | --- | unaffected |
| firefox116 | --- | fixed |
| firefox117 | + | fixed |
People
(Reporter: aryx, Assigned: padenot)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
diannaS
:
approval-mozilla-beta+
diannaS
:
approval-mozilla-esr115+
|
Details | Review |
30 crashes from 9 installations with the latest Nightly - 117.0a1 20230720211923
Crash report: https://crash-stats.mozilla.org/report/index/dca31f2d-0cc3-4f10-885c-9f7340230721
MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(mStart <= mEnd) (Invalid Interval)
Top 10 frames of crashing thread:
0 libxul.so mozilla::media::Interval<mozilla::media::TimeUnit>::Interval<mozilla::media::TimeUnit&, mozilla::media::TimeUnit> dom/media/Intervals.h:48
1 libxul.so mozilla::AudioTrimmer::PrepareTrimmers dom/media/platforms/wrappers/AudioTrimmer.cpp:209
2 libxul.so mozilla::AudioTrimmer::Decode dom/media/platforms/wrappers/AudioTrimmer.cpp:32
3 libxul.so mozilla::MediaDataDecoderProxy::Decode const dom/media/platforms/wrappers/MediaDataDecoderProxy.cpp:31
3 libxul.so mozilla::detail::ProxyFunctionRunnable<mozilla::MediaDataDecoderProxy::Decode xpcom/threads/MozPromise.h:1690
4 libxul.so mozilla::TaskQueue::Runner::Run xpcom/threads/TaskQueue.cpp:257
5 libxul.so nsThreadPool::Run xpcom/threads/nsThreadPool.cpp:343
6 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1193
7 libxul.so NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:480
7 libxul.so mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:300
| Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
| Assignee | ||
Comment 1•3 years ago
|
||
Comment 2•3 years ago
|
||
I can reproduce this consistently on Slack.
Comment 4•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
| Assignee | ||
Comment 5•3 years ago
|
||
Comment on attachment 9345030 [details]
Bug 1844741 - Consistently use remaining padding when trimming mp3. r?alwu
Beta/Release Uplift Approval Request
- User impact if declined: If this patch is not taken and the patches for bug 1843003 are taken, this will cause a crash.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This is well tested and the fix has been verified in Nightly.
- String changes made/needed: none
- Is Android affected?: Yes
Comment 6•3 years ago
|
||
Comment on attachment 9345030 [details]
Bug 1844741 - Consistently use remaining padding when trimming mp3. r?alwu
Approved for 116.0rc1
Updated•3 years ago
|
Comment 8•3 years ago
|
||
Comment on attachment 9345030 [details]
Bug 1844741 - Consistently use remaining padding when trimming mp3. r?alwu
Approved for 115.1esr
Updated•3 years ago
|
Updated•3 years ago
|
Comment 10•3 years ago
|
||
Probably regressed by bug 1703812 or bug 1817997
Updated•3 years ago
|
Description
•