Bug 1844741 - Consistently use remaining padding when trimming mp3. r=alwu

Creating the file was made in the following way:
- Create a VBR file
- Modify the padding field so that it spans multiple packets (greater than 1152
frames in this case)
- Copy and paste the last mp3 packet (starting with 0xfffd) multiple times so
that more packets are found after having trimmed the last packet (marked as
EOS).

Differential Revision: https://phabricator.services.mozilla.com/D184213